--- a/sources/VeloCity.Wpf.Presentation/Pages/SprintMemberCalendar/SprintMemberCalendarControl.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/SprintMemberCalendar/SprintMemberCalendarControl.xaml
@@ -17,18 +17,18 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <UserControl
-    x:Class="DustInTheWind.VeloCity.Wpf.Presentation.Pages.SprintMembers.SprintMemberCalendar"
+    x:Class="DustInTheWind.VeloCity.Wpf.Presentation.Pages.SprintMemberCalendar.SprintMemberCalendarControl"
 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:sprintMembers="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.SprintMembers"
+    xmlns:sprintMemberCalendar="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.SprintMemberCalendar"
 
     mc:Ignorable="d"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    d:DataContext="{d:DesignInstance sprintMembers:SprintMemberCalendarViewModel}">
+    d:DataContext="{d:DesignInstance sprintMemberCalendar:SprintMemberCalendarViewModel}">
 
     <UserControl.Resources>
         <ResourceDictionary>
