--- a/sources/VeloCity.Wpf.Presentation/Pages/SprintMembers/SprintMembersView.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/SprintMembers/SprintMembersView.xaml
@@ -24,7 +24,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:sprintMembers="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.SprintMembers"
-    xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Converters"
+    xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Converters" 
+    xmlns:sprintMemberCalendar="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.SprintMemberCalendar"
 
     mc:Ignorable="d"
     d:DesignHeight="450"
@@ -160,7 +161,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             FontSize="25"
                             Margin="0 0 0 20" />
 
-                        <sprintMembers:SprintMemberCalendar
+                        <sprintMemberCalendar:SprintMemberCalendarControl
                             DataContext="{Binding SprintMemberCalendarViewModel}" />
 
                     </DockPanel>
