--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/ContentWithInfoStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/ContentWithInfoStyles.xaml
@@ -23,58 +23,52 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
+        <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/InfoIconTemplates.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type styles:PropertyGroupView}">
-        <Setter Property="IsTabStop" Value="False" />
-
+    <Style TargetType="{x:Type styles:ContentWithInfo}" x:Key="{x:Type styles:ContentWithInfo}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate>
-                    <StackPanel>
-                        <ItemsPresenter />
-                    </StackPanel>
+                <ControlTemplate TargetType="{x:Type styles:ContentWithInfo}">
+
+                    <Grid HorizontalAlignment="Left">
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+
+                        <ContentPresenter
+                            Grid.Column="0"
+                            Content="{TemplateBinding Content}">
+
+                            <ContentPresenter.Resources>
+                                <Style TargetType="{x:Type TextBlock}">
+                                    <Setter Property="TextWrapping" Value="Wrap" />
+                                    <Setter Property="FontSize" Value="20" />
+                                </Style>
+                            </ContentPresenter.Resources>
+                        </ContentPresenter>
+
+                        <Control
+                            Grid.Column="1"
+                            Style="{StaticResource InfoIconStyle}"
+                            Width="16"
+                            Height="16"
+                            Margin="10 0 0 0"
+                            VerticalAlignment="Center" />
+
+                    </Grid>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Cursor" Value="Hand" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-
-        <Setter Property="ItemTemplate">
-            <Setter.Value>
-                <DataTemplate>
-
-                    <Grid Margin="0 0 0 8">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" SharedSizeGroup="LabelColumn" />
-                            <ColumnDefinition Width="20" />
-                            <ColumnDefinition Width="*" SharedSizeGroup="ValueColumn" />
-                        </Grid.ColumnDefinitions>
-
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-
-                        <TextBlock
-                            Grid.Column="0"
-                            FontSize="{StaticResource DefaultFontSize}"
-                            Text="{Binding Name}" />
-
-                        <ContentControl
-                            Grid.Column="2"
-                            Content="{Binding Value}"
-                            IsTabStop="False">
-
-                            <ContentControl.Resources>
-                                <Style TargetType="{x:Type TextBlock}">
-                                    <Setter Property="TextWrapping" Value="Wrap" />
-                                </Style>
-                            </ContentControl.Resources>
-                        </ContentControl>
-                    </Grid>
-
-                </DataTemplate>
-            </Setter.Value>
-        </Setter>
-
     </Style>
 
 </ResourceDictionary>
