--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/LabeledContentStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/LabeledContentStyles.xaml
@@ -19,62 +19,61 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:styles="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles">
+    xmlns:styles="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles"
+    xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles.Converters">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type styles:PropertyGroupView}">
-        <Setter Property="IsTabStop" Value="False" />
+    <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
 
+    <Style x:Key="{x:Type styles:LabeledContent}" TargetType="{x:Type styles:LabeledContent}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate>
-                    <StackPanel>
-                        <ItemsPresenter />
-                    </StackPanel>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-
-        <Setter Property="ItemTemplate">
-            <Setter.Value>
-                <DataTemplate>
+                <ControlTemplate TargetType="{x:Type styles:LabeledContent}">
 
                     <Grid Margin="0 0 0 8">
+
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" SharedSizeGroup="LabelColumn" />
                             <ColumnDefinition Width="20" />
                             <ColumnDefinition Width="*" SharedSizeGroup="ValueColumn" />
                         </Grid.ColumnDefinitions>
 
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-
-                        <TextBlock
+                        <Label
                             Grid.Column="0"
                             FontSize="{StaticResource DefaultFontSize}"
-                            Text="{Binding Name}" />
+                            Content="{TemplateBinding Label}" />
 
-                        <ContentControl
+                        <!--<ContentControl
                             Grid.Column="2"
-                            Content="{Binding Value}"
-                            IsTabStop="False">
+                            Content="{TemplateBinding Content}">
 
                             <ContentControl.Resources>
-                                <Style TargetType="{x:Type TextBlock}">
+                                <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource {x:Type TextBlock}}">
                                     <Setter Property="TextWrapping" Value="Wrap" />
+                                    <Setter Property="FontSize" Value="20" />
                                 </Style>
                             </ContentControl.Resources>
-                        </ContentControl>
+                        </ContentControl>-->
+
+                        <ContentPresenter
+                            Grid.Column="2"
+                            Content="{TemplateBinding Content}">
+
+                            <ContentPresenter.Resources>
+                                <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource {x:Type TextBlock}}">
+                                    <Setter Property="TextWrapping" Value="Wrap" />
+                                    <Setter Property="FontSize" Value="20" />
+                                </Style>
+                            </ContentPresenter.Resources>
+                        </ContentPresenter>
                     </Grid>
 
-                </DataTemplate>
+                </ControlTemplate>
             </Setter.Value>
         </Setter>
-
     </Style>
 
 </ResourceDictionary>
